# statistical-arbitrage-v2

./: .gitignore  CLAUDE.md  README.md  check_available_pairs.py  pyproject.toml  run_dashboard.py  test_connection.py
.bg-shell/: manifest.json
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md  M001-SUMMARY.md  M001-VALIDATION.md
.gsd/milestones/M002/: M002-CONTEXT-DRAFT.md  M002-CONTEXT.md  M002-DISCUSSION.md  M002-RESEARCH.md  M002-ROADMAP.md  M002-SUMMARY.md  M002-VALIDATION.md
.gsd/milestones/M003/: M003-CONTEXT-DRAFT.md  M003-CONTEXT.md
.gsd/milestones/M004/: M004-CONTEXT-DRAFT.md
api/: main.py  schemas.py
api/routers/: optimization.py  research.py
config/: settings.py
docs/: getting_started.md  vscode_jupyter_guide.md
docs/findings/: 01_pair_discovery_cointegration.md  README.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/components/academy/: AcademyStepper.tsx  EducationalPanel.tsx  StepCointegrationTest.tsx  (+5 more)
frontend/contexts/: PairContext.tsx
frontend/e2e/: integration-flows.spec.ts  optimize.spec.ts  research-hub.spec.ts  smoke.spec.ts  trading.spec.ts
frontend/lib/: api.ts  glossary.ts  theme.ts
frontend/scripts/: check-academy-glossary-links.mjs
notebooks/: 00_cointegration_explained.ipynb  01_data_collection_eth_etc.ipynb  02_cointegration_analysis.ipynb  03_pair_discovery.ipynb  04_timeframe_analysis.ipynb
tests/: test_api.py
(+147 files in other folders)
